# AniEditor

./: .gitignore  CMakeLists.txt  MainWindow.ini  README.md  project.el
Data/: .gitignore
Data/beam/: aniedit.ini  aniedit_cen.ini  aniedit_redrs.ini  con_nodes_center.bou  cubature.ini  cubature.ini.pattern  cubaturePoints.txt  curvefit.ini  mtlopt.ini  mtlopt_cen.ini  mtlopt_cen_RedRS.ini  mtlopt_cen_keyW.ini  mtlopt_cen_keyW3.ini  mtlopt_cen_keyW5.ini  mtlopt_cen_keyW_no_up.ini  mtlopt_cen_keyW_no_up3.ini  mtlopt_cen_keyW_no_up5.ini  mtlopt_cen_keyW_sub.ini  mtlopt_cen_keyf.ini  mtlopt_cen_keyf_swing_one_end.ini  mtlopt_cen_keyf_swing_one_end_03_modes.ini  mtlopt_cen_keyf_swing_one_end_06_modes.ini  mtlopt_cen_keyf_swing_one_end_08_modes.ini  mtlopt_cen_keyf_swing_one_end_10_modes.ini  mtlopt_test.ini  (+8 more)
Data/beam-coarse/: aniedit.ini  beam.stl  con_nodes.bou  cubature.ini  cubature.ini.pattern  cubaturePoints.txt  interp-weights.txt  nlmode-gen.ini  nlmode-gen.ini.pattern  simulate.ini  warpbasis.ini
Data/beam-fine/: aniedit.ini  beam.abq  con_nodes.bou  cubature.ini  cubaturePoints.txt  curvefit.ini  interp-weights.txt  nlmode-gen.ini  simulate.ini  warpbasis.ini
Doc/: .gitignore  AdjMtlOptImp.tex  Applications.tex  BasisOpt4.tex  DimensionalAnalysis.tex  MatrixReshape.tex  MtlOptImp.tex  MtlOptImp2.tex  MtlOptImp3.tex  MtlOptImp4.tex  MtlOptImp5.tex  MtlOptImp6.tex  MtlOptReport.tex  MtlOptReport2.tex  MtlOptReport3.tex  NumericalMethod.tex  Proposal.tex  RSupdate.tex  ScaleTimestep.tex  Unconstrained.tex  ZMtlOptImp.tex  cubature.tex  results.tex
SRC/: CMakeLists.txt
SRC/AniEditUI/: AniEditDM.cpp  AniEditDM.h  AniEditDMConNodeDrag.cpp  AniEditDMDragCtrl.h  AniEditDMRender.cpp  AniEditDMRender.h  AniEditDMRenderCtrl.h  AniEditDMSelCtrl.h  AniEditDMVolVertexSel.h  AniEditDM_UI.cpp  AniEditDM_UI.h  AniEditMainWin.cpp  AniEditMainWin.h  CMakeLists.txt  DragGroupSelDraw.cpp  DragTrajectoryRecord.cpp  PreviewAniDM.h  PreviewAniDMRender.h  PreviewAniDMRenderCtrl.h  VolNodeGroupRender.h  VolObjMeshCtrl.cpp  VolObjMeshCtrl.h  about.ui  aniedit.ui
SRC/AnimationEditor/: BaseInterpolator.h  CMakeLists.txt  InterpolatorFactory.cpp
SRC/AnimationEditor/AD/: UnwarperAD.h  WarpedPosConAD.cpp  WarpedPosConAD.h  WarperAD.h
SRC/AnimationEditor/Interpolators/: IMWInterpolator.cpp  RedRSInterpolator.cpp  RedRSInterpolator.h
SRC/BaseSim/: BarycenterDragger.cpp  BarycenterDragger.h  CMakeLists.txt  ConNodeSetDrawer.cpp  ConNodeSetDrawer.h  ConNodesOfFrame.cpp  ConNodesOfFrame.h  FrameName.cpp  FullBaryCenConM.h  FullConMat.h  MeshVtkIO.h  ObjBBox.cpp  ObjBBox.h  ObjFileSeqLoader.h  ObjRenderMesh.cpp  ObjRenderMesh.h  Vol2Obj.cpp  Vol2Obj.h  Vol2ObjAdaptor.cpp  Vol2ObjAdaptor.h  VolBBox.cpp  VolBBox.h  VolObjMesh.cpp  VolObjMesh.h
SRC/BaseSim/ConAndDrag/: BarycenterDragger.cpp  BarycenterDragger.h  BarycenterDraggerVec.cpp  BarycenterDraggerVec.h  ConNodeSetDrawer.h  ConNodesOfFrame.cpp  ConNodesOfFrame.h  ConNodesOfFrameSet.cpp  ConNodesOfFrameSet.h  Perturbator.h  RedBaryCenConM.cpp  RedBaryCenConM.h  RedCenConM.cpp  RedCenConM.h  SelectionGroup.cpp  SelectionGroup.h
SRC/BaseSim/ObjMesh/: FrameName.h  ObjFileSeqLoader.cpp  ObjFileSeqLoader.h  ObjRenderMesh.cpp
SRC/BaseSim/Shader/: GLSLProgramObject.cpp  GLSLProgramObject.h  PhongShader.cpp  PhongShader.h  example.txt  nvShaderUtils.h
SRC/Tools/: CMakeLists.txt
SRC/Tools/BasisGenerator/: CMakeLists.txt
SRC/Tools/Cubature/: CMakeLists.txt  PerNodeCubature.h  ReducedRSCubature.h  WarpingCubature.h  main.cpp
SRC/Tools/ExpandKeyToSeq/: CMakeLists.txt  main.cpp
SRC/Tools/ExportCubatures/: CMakeLists.txt  main.cpp
SRC/Tools/ExportPath/: CMakeLists.txt  main.cpp
SRC/Tools/KeyfApprox/: CMakeLists.txt  VolApproxTri.cpp  VolApproxTri.h  main.cpp
SRC/Tools/KeyframeToPartialCon/: CMakeLists.txt  main.cpp
SRC/Tools/MtlRender/: CMakeLists.txt  main.cpp
SRC/Tools/Simulator/: CMakeLists.txt
SRC/Tools/StVKSimulator/: CMakeLists.txt  StVKSimulator.cpp  StVKSimulator.h
SRC/Tools/TetOptimizer/: CMakeLists.txt  main.cpp
SRC/Tools/Unify/: CMakeLists.txt  main.cpp
SRC/Tools/Vol2Obj/: CMakeLists.txt  main.cpp
SRC/UI/: AniEditDM.cpp  AniEditDM.h  AniEditDMConNodeDrag.cpp  AniEditDMConNodeDrag.h  AniEditDMDragCtrl.h  AniEditDMRender.cpp  AniEditDMRender.h  AniEditDMSelection.h  AniEditDMVolVertexSel.cpp  AniEditDMVolVertexSel.h  AniEditDM_UI.h  AniEditMainWin.cpp  AniEditMainWin.h  CMakeLists.txt  DragGroupSelDraw.cpp  DragGroupSelDraw.h  DragTrajectoryRecord.h  KeyframeDM.cpp  KeyframeDM.h  KeyframeDMRender.h  KeyframeDMSelection.h  ManipulateOP.h  PreviewAniDM.h  PreviewAniDMRender.h  PreviewAniDMRenderCtrl.h  VolApproxTri.cpp  VolApproxTri.h  VolMeshDrawer.cpp  VolMeshDrawer.h  VolNodeGroupRender.cpp  VolNodeGroupRender.h  aniedit.ui  main.cpp  main_UITest.cpp
Script/: cmake.sh  convert_keyf_to_parcon.py  cubature_curves  cubature_curves.py  draw_energy_curve.py  fft.py  gen_cubatures.py  gen_nlmodes.py  keyframe_approx.py  modal_analysis.py  ogv2avi.sh  opt_log_ana.py  opt_run.py  resize_images.py  run_test_case.py  run_test_case_log.py  run_test_case_mesh.py  runalltest.py  update_figures.py  utility.py  vol2obj.py
TestCase/: CMakeLists.txt
TestCase/EditorTest/: BasisUpdatingTest.cpp  CMakeLists.txt  MASimulatorADTest.cpp  MtlOptEnergyAdjTest.cpp  MtlOptEnergyTest.cpp  SpaceTimeHessianInverseTest.cpp
TestCase/OptWTest/: #FEMSimTest.h#  CMakeLists.txt  CheckRedRS.h  UpdateW.h  main.cpp
TestCase/TemptTest/: CMakeLists.txt  DFT.h  DFTTest.cpp  ElasticMtlBasicTest.cpp  ElasticMtlDecoupleTest.cpp  ElasticMtlOpt.cpp  ElasticMtlOpt.h  ElasticMtlPCATest.cpp  ElasticMtlRSTest.cpp  ElasticMtlStVKTest.cpp  ElasticMtlTest.cpp  HarmonicOscillator.h  HarmonicOscillatorTest.cpp  MtlOpt.cpp  MtlOpt.h  MtlOptItTest.cpp  MtlOptModel.cpp  MtlOptModel.h  MtlOptTest.cpp  MtlOptTestSave.cpp
TestCase/WarpingTest/: CMakeLists.txt  ComputeBjADTest.cpp  ComputeBjTest.cpp  ComputeGeAutoDiffTest.cpp  DefGradOperatorTest.cpp  FullConMatTest.cpp  MapMA2RSTest.cpp  NodeWarperTest.cpp  RSCoordCompTest.cpp  RedRSWarperExtTest.cpp  main.cpp
(+297 files in other folders)
