# ADD_SUBDIRECTORY(BasisGenerator)
ADD_SUBDIRECTORY(Cubature)
# ADD_SUBDIRECTORY(KeyfApprox)
# ADD_SUBDIRECTORY(TetOptimizer)
# ADD_SUBDIRECTORY(Vol2Obj)
ADD_SUBDIRECTORY(Unify)
# ADD_SUBDIRECTORY(KeyframeToPartialCon)
# ADD_SUBDIRECTORY(StVKSimulator)
ADD_SUBDIRECTORY(ExportPath)
ADD_SUBDIRECTORY(ExportCubatures)
# ADD_SUBDIRECTORY(MtlRender)
ADD_SUBDIRECTORY(ExpandKeyToSeq)