SET(APPNAME WarpingTest)

AUX_SOURCE_DIRECTORY(. IEDSTest_src)
AUX_SOURCE_DIRECTORY(./Warping Warping_src)

ADD_EXECUTABLE(${APPNAME} 

  ${Warping_src}
  ${IEDSTest_src}
  )

LINK_PROJECT(${APPNAME}

  warping
  basetestor
)

TARGET_LINK_LIBRARIES(${APPNAME}

  ${CPPUNIT_LIBRARIES}
  ${Boost_LIBRARIES}
  ${SUITESPARSE_LIBRARIES}
  ${ARPACK_LIBRARIES}
  ${SUPERLU2.0_LIBRARIES}
  ${LAPACK_LIBRARIES}
  ${SUITESPARSE_LIBRARIES}
  ${CASADI_LIBRARIES}
)